syntax = "proto3";

option csharp_namespace = "Apothecaric.Authentication.Service.Protos";

package Authenticate;

service Authentication {

	rpc CreateToken (LoginRequest) returns (AuthenticatedUserResponse);

	rpc RefreshToken (RefreshTokenRequest) returns (AuthenticatedUserResponse);
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message RefreshTokenRequest {
	string authToken = 1;
	string refreshToken = 2;
	string firstName = 3;
	string lastName = 4;
}

message AuthenticatedUserResponse {
	string authToken = 1;
	string refreshToken = 2;
	string firstName = 3;
	string lastName = 4;
}

